<resources>
    <string name="app_name">Verb Master</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chooseLanguage">Choose the language you want to study</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>
</resources>
