<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooseLanguageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/chooseLanguage"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/french"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/spanish"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/portuguese"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/italian"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>